# webapi.event+/Controllers/PresencaEventoController.cs
@@ -62,7 +62,7 @@ namespace webapi.event_.Controllers
             }
         }
 
-        [HttpDelete]
+        [HttpDelete("{id}")]
         public IActionResult Delete(Guid id)
         {
             try
